--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,37 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Neural App</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 40px;
+      text-align: center;
+    }
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Neural App</h1>
-  <button onclick="trainModel()">Train Module</button>
-  <script src="script.js"></script>
+  <div class="container">
+    <h1>Welcome to My Neural App</h1>
+    <p>This is a test page hosted with GitHub Pages.</p>
+  </div>
 </body>
 </html>
