--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,11 @@
   <div class="container">
     <h1>Welcome to My Neural App</h1>
     <p>This is a test page hosted with GitHub Pages.</p>
+ <button onclick="trainModel()">Train Module</button>
+  <div id="progressContainer" style="width: 100%; background: #eee; margin-top: 15px;">
+  <div id="progressBar" style="width: 0%; height: 20px; background: #4caf50;"></div>
   </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
