--- a/Index.html
+++ b/Index.html
@@ -37,5 +37,8 @@
 <div id="progressContainer" style="width: 100%; background: #eee; margin-top: 15px;">
   <div id="progressBar" style="width: 0%; height: 20px; background: #4caf50;"></div>
 </div>
-<!-- End Group H 1of4 bbbbbbb -->
+    <script src="script.js"></script>
+</body>
+</html>
+<!-- End Group H 1of4 -->
     
