--- a/Index.html
+++ b/Index.html
@@ -37,6 +37,12 @@
 <div id="progressContainer" style="width: 100%; background: #eee; margin-top: 15px;">
   <div id="progressBar" style="width: 0%; height: 20px; background: #4caf50;"></div>
 </div>
+    <!-- Group H 2of4: File Upload Box aaaaaaa -->
+<div style="margin-top: 30px;">
+  <input type="file" id="fileInput" />
+  <p id="fileNameDisplay">No file selected</p>
+</div>
+<!-- End Group H 2of4 bbbbbbb -->
     <script src="script.js"></script>
 </body>
 </html>
